# midiclaw

./: .gitignore  PRD.md  Package.swift  README.md
.github/workflows/: release.yml
Sources/MidiClaw/: AppState.swift  MidiClawApp.swift
Sources/MidiClaw/Models/: ChatMessage.swift  Instrument.swift  LLMManager.swift  MindiAccompanist.swift  PianoModel.swift  StepSequencerModel.swift
Sources/MidiClaw/Views/: AUHostView.swift  ChatView.swift  HostSettingsView.swift  MainContentView.swift  MenuBarView.swift  MonitorView.swift  OnboardingView.swift  PianoRollView.swift  PortPickerView.swift  SessionDetailView.swift  SessionListView.swift  StepSequencerView.swift  TokenStreamView.swift
Sources/MidiClawAU/: AudioComponentDescription+MidiClaw.swift  MidiClawAUParameters.swift  MidiClawAUProcessor.swift  MidiClawAUView.swift  MidiClawAUViewController.swift  MidiClawAudioUnit.swift
Sources/MidiClawCore/MIDI/: MIDIEvent.swift  MIDIHardwareScanner.swift  MIDIManager.swift  MIDIOutput.swift  MIDIParser.swift  MIDIPortManager.swift
Sources/MidiClawCore/Session/: MIDIFileExporter.swift  MIDIFileImporter.swift  Session.swift  SessionEvent.swift  SessionPlayer.swift  SessionRecorder.swift  SessionStore.swift
Sources/MidiClawCore/Tokenizer/: MidiDecoder.swift  MidiEncoder.swift  MidiToken.swift  TokenVocabulary.swift  VocabularyExporter.swift
Sources/MidiClawCore/Util/: Logger.swift  MachTime.swift
Tests/MidiClawAUTests/: MidiClawAUParameterTests.swift  MidiClawAUProcessorTests.swift
Tests/MidiClawCoreTests/MIDI/: MIDIEventTests.swift  MIDIParserTests.swift
Tests/MidiClawCoreTests/Session/: MIDIFileRoundTripTests.swift  SessionStoreTests.swift
Tests/MidiClawCoreTests/Tokenizer/: MidiDecoderTests.swift  MidiEncoderTests.swift  MidiTokenTests.swift  RoundTripTests.swift
VST/: CMakeLists.txt
VST/resource/: Info.plist.in  midiclaw.rc
VST/src/: MidiClawCIDs.h  MidiClawController.cpp  MidiClawController.h  MidiClawFactory.cpp  MidiClawProcessor.cpp  MidiClawProcessor.h  MidiDecoder.cpp  MidiDecoder.h  MidiEncoder.cpp  MidiEncoder.h  MidiToken.h  TokenVocabulary.cpp  TokenVocabulary.h  version.h
